# transition-compass-model

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
.github/workflows/: _lint.yaml  code_quality.yaml  notify-speed-to-zero.yml  publish-pypi.yml
transition_compass_model/: __init__.py
transition_compass_model/_database/: __init__.py
transition_compass_model/_database/data/: __init__.py
transition_compass_model/_database/data/datamatrix/: agriculture.pickle  ammonia.pickle  buildings.pickle  energy.pickle  forestry.pickle  industry.pickle  lca.pickle  lifestyles.pickle  transport.pickle
transition_compass_model/_database/data/interface/: agriculture_to_ammonia.pickle  agriculture_to_emissions.pickle  agriculture_to_energy.pickle  agriculture_to_land-use.pickle  ammonia_to_emissions.pickle  buildings_to_emissions.pickle  buildings_to_energy.pickle  buildings_to_industry.pickle  buildings_to_lca.pickle  climate_to_buildings.pickle  energy_to_forestry.pickle  industry_build_interface_for_local_run.py  industry_to_agriculture.pickle  industry_to_ammonia.pickle  industry_to_emissions.pickle  industry_to_energy.pickle  industry_to_forestry.pickle  industry_to_land-use.pickle  industry_to_lca.pickle  land_to_forestry.pickle  lifestyles_to_buildings.pickle  lifestyles_to_industry.pickle  transport_to_emissions.pickle  transport_to_energy.pickle  transport_to_industry.pickle  transport_to_lca.pickle
transition_compass_model/_database/pre_processing/: .gitignore  WorldBank_data_extract.py  __init__.py  api_routine_Eurostat.py  api_routines_CH.py  fix_jumps.py  json_routine_Eurostat.py  plots.ipynb  routine_JRC.py
transition_compass_model/_database/pre_processing/agriculture & land use/: agriculture_landuse_preprocessing_EU.py  agriculture_landuse_preprocessing_VD.py  agriculture_preprocessing_temp.py  canton_agriculture_pre-processing.py  forestry_preprocessing_ch.py  update_DM_agriculture.py
transition_compass_model/_database/pre_processing/agriculture_land_use/: __init__.py  agriculture_landuse_preprocessing_EU.py  agriculture_landuse_preprocessing_VD.py  agriculture_preprocessing_temp.py  canton_agriculture_pre-processing.py  forestry_preprocessing_ch.py  update_DM_agriculture.py
transition_compass_model/_database/pre_processing/buildings/: __init__.py
transition_compass_model/_database/pre_processing/buildings/Europe/: __init__.py  buildings_preprocessing_EU.py
transition_compass_model/_database/pre_processing/buildings/Switzerland/: __init__.py  appliances_CH.py  buildings_interfaces_CH.py  buildings_postprocessing_CH.py  buildings_preprocessing_CH.py  buildings_preprocessing_CH_fts_EP2050.py  buildings_preprocessing_main_CH.py
transition_compass_model/_database/pre_processing/climate/: __init__.py
transition_compass_model/_database/pre_processing/climate/Europe/: EU_climate_build-fake-pickle.py  climate_preprocessing_EU.py
transition_compass_model/_database/pre_processing/climate/Switzerland/: climate_preprocessing_CH.py
transition_compass_model/_database/pre_processing/industry/: __init__.py
transition_compass_model/_database/pre_processing/industry/Switzerland/: __init__.py  industry_preprocessing_main_CH.py  (+1 more)
transition_compass_model/_database/pre_processing/lca/: lca_preprocessing_main.py
transition_compass_model/_database/pre_processing/lifestyles/: __init__.py
transition_compass_model/_database/pre_processing/minerals/: __init__.py
transition_compass_model/_database/pre_processing/transport/: __init__.py
transition_compass_model/config/: lever_position.json
transition_compass_model/model/: __init__.py  agriculture_module.py  ammonia_module.py  buildings_module.py  climate_module.py  district_heating_module.py  emissions_module.py  energy_module.py  energy_module_AMPL.py  forestry_module.py  industry_module.py  interactions.py  interactions_localrun.py  landuse_module.py  lca_module.py  lifestyles_module.py  minerals_module.py  oilrefinery_module.py  power_module.py  transport_module.py
transition_compass_model/model/ammonia/: interfaces.py  workflows.py
transition_compass_model/model/buildings/: __init__.py  interfaces.py  workflows.py
transition_compass_model/model/common/: __init__.py  auxiliary_functions.py  config_loader.py  constant_data_matrix_class.py  data_matrix_class.py  hourly_data_functions.py  io_database.py
transition_compass_model/model/emissions/: interfaces.py  workflows.py
transition_compass_model/model/emissions/old/: emissions_module.py
transition_compass_model/model/energy/: __init__.py  interfaces.py  utils.py
transition_compass_model/model/energy/energyscope-MILP/: README.md
transition_compass_model/model/energy/energyscopepyomo/: main.py  ses_main.json  ses_pyomo.py
transition_compass_model/model/industry/: interfaces.py  workflows.py
transition_compass_model/model/lca/: interfaces.py  workflows.py
transition_compass_model/model/transport/: __init__.py  checks.py  interfaces.py  utils.py  workflows.py
(+225 files in other folders)
