[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leure-transition-compass-model"
version = "0.1.0"
description = "Leure Transition Compass Model - Speed to Zero"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "amply>=0.1.6",
    "amplpy>=0.13.0",
    "datamatrix>=1.0.16",
    "deepl",
    "eurostat>=1.1.1",
    "faostat>=1.1.2",
    "interface>=2.11.1",
    "matplotlib==3.8.2",
    "numpy>=1.21,<2",
    "openpyxl>=3.1.5",
    "pandas==2.2.3",
    "plotly==5.18.0",
    "pycountry>=26.2.16",
    "pyomo==6.9.5",
    "requests",
    "scikit-learn>=1.8.0",
    "scipy==1.15.3",
    "statsmodels>=0.14.0",
    "tqdm>=4.67.3",
]

[tool.setuptools]
package-dir = {"leure_transition_compass_model" = "leure-transition-compass-model"}
packages = ["leure_transition_compass_model"]

[tool.setuptools.package-data]
"*" = ["**/*.pickle", "**/*.json", "**/*.csv", "**/*.xlsx", "**/*.mod"]
