[build-system]
requires = ["setuptools>=65.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transition-compass-model"
dynamic = ["version"]
description = "Multi-sector climate pathway calculation engine for modeling policy impacts on emissions, energy, and environmental indicators"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "amply>=0.1.6",
    "amplpy>=0.13.0",
    "datamatrix>=1.0.16",
    "deepl",
    "eurostat>=1.1.1",
    "faostat>=1.1.2",
    "interface>=2.11.1",
    "matplotlib==3.8.2",
    "numpy>=1.21,<2",
    "openpyxl>=3.1.5",
    "pandas==2.2.3",
    "plotly==5.18.0",
    "pycountry>=26.2.16",
    "pyomo==6.9.5",
    "requests",
    "scikit-learn>=1.8.0",
    "scipy==1.15.3",
    "statsmodels>=0.14.0",
    "tqdm>=4.67.3",
]

[project.urls]
Homepage = "https://github.com/2050Calculators/transition-compass-model"
Repository = "https://github.com/2050Calculators/transition-compass-model"

[dependency-groups]
dev = [
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "codespell>=2.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["transition_compass_model*"]

[tool.setuptools.package-data]
"*" = ["**/*.pickle", "**/*.json", "**/*.csv", "**/*.xlsx", "**/*.mod"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402", "E741", "F841", "E712"]

[tool.ruff.lint.isort]
known-first-party = ["transition_compass_model"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["tests", "old", ".venv"]

[tool.codespell]
skip = "*/_database/*"
ignore-words-list = "classe,ans,vie,variante,habitant,habitants,ot,ois,ore,tre,fo,caf,reste,mesure,calculs,categorie,formating,dowload,comute,lenght,blanck,syntetic,catpure,crate,arrray,moteur,correspondance,temporarely,substracting,fallow,exlcuded,mangement"
